--- a/content/talk/EUSA_2019-2.md
+++ b/content/talk/EUSA_2019-2.md
@@ -23,7 +23,7 @@ event_url = "https://www.eustudies.org/conference"
 location = "Denver, CO"
 
 # Is this a selected talk? (true/false)
-selected = false
+selected = true
 
 # Projects (optional).
 #   Associate this talk with one or more of your projects.
